--- a/credentials.env
+++ b/credentials.env
@@ -5,4 +5,4 @@ ALERT_PHONE=+************
 
 EMAIL_ADDRESS=email
 EMAIL_PASSWORD=password
-ALERT_EMAIL=email
+ALERT_EMAIL=Ranger/Forest Department email
